Tank BP and View Axis

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=860F6AF348AFC6E556FC60AB6EFF442F
+CompanyName=Code 3 Dev
+Homepage=code3dev.com
+CopyrightNotice=Copyright Shayne Stewart 2017
+
